# Video_Game_Izom

./: CMakeLists.txt  Enemies.cpp  Enemies.hpp  Mechanics.cpp  Mechanics.hpp  Tactics.cpp  Tactics.hpp  main.cpp  main.hpp
Data/: Camera.cpp  Camera.hpp  Map.cpp  Map.hpp  PlayerController.cpp  PlayerController.hpp  Renderer.cpp  Renderer.hpp  RetroShader.hpp  Types.hpp
Data/HUD/: HUD.cpp  HUD.hpp  UIEffects.cpp  UIEffects.hpp
Data/Network/: NetManager.cpp  NetManager.hpp
Data/Physics/: Collisions.cpp  Collisions.hpp  Grid.cpp  Grid.hpp  Mechanics.cpp  Mechanics.hpp  Tactics.cpp  Tactics.hpp  Tank.cpp  Tank.hpp
Data/Physics/Technik/: Motorcycle.hpp  SteamCar.hpp  VehicleManager.cpp  VehicleManager.hpp
Data/World/: LootSystem.cpp  LootSystem.hpp  Map.cpp  Map.hpp
Data/bodies/: Enemies.cpp  Enemies.hpp
Data/bodies/Type_Enemies/: Punching_Bag.aut  Target_Dummy.aut  base.aut
Player/: Inventory.cpp  Inventory.hpp  Player.cpp  Player.hpp  SaveSystem.cpp  SaveSystem.hpp
